--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Fmkli - bob实况</title>
+    <title>Fmkli&Bob实况</title>
     <meta name="description" content="" />
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,14 +21,15 @@
                     </g>
                 </g>
             </svg>
-            <img alt="" src="" class="avatar-img no-delay"/>
+            <img alt="头像" src="./static/img/headphoto.png" />
         </div>
         <div class="loading-text text-center">
-            <p class="loading-pre">Loading...</p>
-            <p class="avatar-name">Fmkli - bob实况</p>
-            <p class="dokidoki-text"></p>
+            <p class="loading-pre">欢迎</p>
+            <p class="avatar-name">Fmkli&Bob实况</p>
+            <p class="dokidoki-text">aaa</p>
         </div>
     </div>
+	
     <div class="background-layer fixed-layer"></div>
     <div class="background-filter fixed-layer"></div>
     <div class="content-layer flex-center">
@@ -39,7 +40,7 @@
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
                         <div>Fmkli的网站</div>
                     </a>
-                    <a href="https://boblive.vercel.app/" class="link-item">
+                    <a href="boblive.vercel.app" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
                         <div>Bob实况的网站</div>
                     </a>
@@ -53,12 +54,16 @@
                                 </g>
                             </g>
                         </svg>
-                        <span class="text-center">Loading...</span>
+                        <span class="text-center">??????...</span>
                     </div>
                 </div><div class="self-content">
                     <div class="info-container">
-联合网站！
-nia
+						<a href="www.minecraft.net">官方网站|Minecraft</a>
+						</br>
+						<a href="https://mp.weixin.qq.com/s/ACxeTv3bGN_0v59qfRLMWA">【为师之乐】这些年学生们给我挖过的坑</a>
+						</br>
+						<a href="www.baidu.com">百度亿下</a>
+						</br>
                     </div>
 
             </div>
@@ -66,19 +71,20 @@ nia
             <div class="self-switcher">
                 <div class="switcher-btn text-center" id="switcher-btn-1">
                     <div class="btn-icon"><i class="fa fa-link"></i></div>
-                    <div class="btn-text">链接</div>
+                    <div class="btn-text">个人网站</div>
                 </div>
                 <div class="switcher-btn text-center">
-
+					<div class="btn-icon"><i class="fafa-info-circle"></i></div>
+					<div class="btn-text"></div>
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-3">
                     <div class="btn-icon"><i class="fa fa-info-circle"></i></div>
-                    <div class="btn-text">关于</div>
+                    <div class="btn-text">友情链接</div>
                 </div>
                 <div class="btn-select-indicator"></div>
             </div>
         </div>
-        <div class="footer-container text-center">© 2021 By <a href="#">Fmkli - bob实况</a></div>
+        <div class="footer-container text-center">© 2021 By <a href="fmkli.js.org">Fmkli</a>&<a href="boblive.ercel.app">Bob实况</a></div>
     </div>
     </body>
 
@@ -98,11 +104,17 @@ nia
         },{
             "url": "static/img/background-2.jpg",
             "thumb": "static/img/background-2-thumb.jpg"
+        },{
+            "url": "static/img/background-3.jpg",
+            "thumb": "static/img/background-3-thumb.jpg"
+        },{
+            "url": "static/img/background-4.jpg",
+            "thumb": "static/img/background-4-thumb.jpg"
         }];
         var senArr = [
             {
-                ch: ["We are joint！"],
-                py: ["We are joint！"],
+                ch: ["欢迎"],
+                py: ["よう","こそ"],
             }, {
                 ch: ["我们","联合","！"],
                 py: ["wo'men","lian'he","！"],
