--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </div><div class="self-content">
                     <div class="info-container">
-						<a href="www.minecraft.net">官方网站|Minecraft</a>
+						<a href="https://www.minecraft.net">官方网站|Minecraft</a>
 						</br>
 						<a href="https://mp.weixin.qq.com/s/ACxeTv3bGN_0v59qfRLMWA">【为师之乐】这些年学生们给我挖过的坑</a>
 						</br>
