--- a/Eindex.html
+++ b/Eindex.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>Fmkli&Bob实况</title>
+    <title>Fmkli&Boblive</title>
     <meta name="description" content="" />
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,8 +24,8 @@
             <img alt="头像" src="./static/img/headphoto.png" />
         </div>
         <div class="loading-text text-center">
-            <p class="loading-pre">欢迎</p>
-            <p class="avatar-name">Fmkli&Bob实况</p>
+            <p class="loading-pre">Welcome</p>
+            <p class="avatar-name">Fmkli&Boblive</p>
             <p class="dokidoki-text">aaa</p>
         </div>
     </div>
@@ -38,19 +38,17 @@
                 <div class="self-content links-container flex-center text-center">
                     <a href="https://fmkli.js.org" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
-                        <div>Fmkli的网站</div>
+                        <div>Fmkli's Website'</div>
                     </a>
-					<br/>
+					</br>
                     <a href="boblive.vercel.app" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
-                        <div>Bob实况的网站</div>
+                        <div>Bob's Website</div>
                     </a>
-					<br>
-					<a>
-						<a href="Eindex.html" class="link-icon">
-							<div class="link-icon"><i class="fa fa-info-circle"></i></div>
-							<div>English Website</div>
-						</a>
+					</br>
+					<a href="index.html" class="link-icon">
+					    <div class="link-icon"><i class="fa fa-info-circle"></i></div>
+					    <div>Chinese Website</div>
 					</a>
                 </div><div class="self-content article-container">
                     <div class="article-content"></div>
@@ -66,11 +64,11 @@
                     </div>
                 </div><div class="self-content">
                     <div class="info-container">
-						<a href="https://www.minecraft.net">官方网站|Minecraft</a>
+						<a href="https://www.minecraft.net">Official website|Minecraft</a>
 						</br>
-						<a href="https://mp.weixin.qq.com/s/ACxeTv3bGN_0v59qfRLMWA">【为师之乐】这些年学生们给我挖过的坑</a>
+						<a href="https://mp.weixin.qq.com/s/ACxeTv3bGN_0v59qfRLMWA">[Joy for the teacher] The pits my students have dug for me over the years</a>
 						</br>
-						<a href="www.baidu.com">百度亿下</a>
+						<a href="www.baidu.com">Baidu</a>
 						</br>
                     </div>
 
@@ -79,7 +77,7 @@
             <div class="self-switcher">
                 <div class="switcher-btn text-center" id="switcher-btn-1">
                     <div class="btn-icon"><i class="fa fa-link"></i></div>
-                    <div class="btn-text">个人网站</div>
+                    <div class="btn-text">Personal website</div>
                 </div>
                 <div class="switcher-btn text-center">
 					<div class="btn-icon"><i class="fafa-info-circle"></i></div>
@@ -87,12 +85,12 @@
                 </div>
                 <div class="switcher-btn text-center" id="switcher-btn-3">
                     <div class="btn-icon"><i class="fa fa-info-circle"></i></div>
-                    <div class="btn-text">友情链接</div>
+                    <div class="btn-text">Links</div>
                 </div>
                 <div class="btn-select-indicator"></div>
             </div>
         </div>
-        <div class="footer-container text-center">© 2021 By <a href="fmkli.js.org">Fmkli</a>&<a href="boblive.ercel.app">Bob实况</a></div>
+        <div class="footer-container text-center">© 2021 By <a href="https://fmkli.js.org">Fmkli</a>&<a href="https://boblive.ercel.app/Eindex">Boblive</a></div>
     </div>
     </body>
 
@@ -121,11 +119,11 @@
         }];
         var senArr = [
             {
-                ch: ["欢迎"],
-                py: ["よう","こそ"],
+                ch: ["Welcome"],
+                py: ["Welcome"],
             }, {
-                ch: ["我们","联合","！"],
-                py: ["wo'men","lian'he","！"],
+                ch: ["Are You OK?Hello,thank you..."],
+                py: ["Are You OK?Hello,thank you..."],
             }
         ];
 
