--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="content-container">
             <div class="self-wrapper">
                 <div class="self-content links-container flex-center text-center">
-                    <a href="https://fmkli.js.org" class="link-item">
+                    <a href="https://www.imfmkli.top" class="link-item">
                         <div class="link-icon"><i class="fa fa-play-circle"></i></div>
                         <div>Fmkli的网站</div>
                     </a>
